# DRF_Project

./: .env.example  .gitignore  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: create_groups.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_payment.py
